--- a/blog/templates/blog/projects.html
+++ b/blog/templates/blog/projects.html
@@ -13,6 +13,14 @@ Inventore nesciunt possimus ipsa officiis. Omnis consectetur explicabo beatae di
 Quae pariatur et tenetur eaque cupiditate harum nulla repudiandae unde!
 Aspernatur nemo enim sapiente suscipit non quod, minima voluptatum quisquam.
 Ex, incidunt hic. Atque, minima sit vel architecto a quae.
-Saepe, magnam dolor debitis ullam incidunt quasi dignissimos nesciunt dicta.</p>
+Saepe, magnam dolor debitis ullam incidunt quasi dignissimos nesciunt dicta.git</p>
 <p>Fill out the form below to get in touch.</p>
+
+<form action="/action_page.php">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+  <input type="submit" value="Submit">
+</form> 
 {% endblock %}
